# viogen

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  generations.py  sessions.py
backend/app/core/: orchestrator.py  phases.py
backend/app/core/specialists/: __init__.py  base.py  composition.py  critic.py  story.py  style.py  technical.py
backend/app/models/: __init__.py  conversation.py  generation.py  message.py  session.py
backend/app/services/: comfyui.py  ollama.py  supabase.py
backend/app/workflows/: builder.py
backend/app/workflows/templates/: basic_txt2img.json
backend/tests/: conftest.py  test_comfyui.py  test_ollama.py  test_orchestrator.py  test_specialists.py  test_supabase.py
docs/plans/: 2026-01-17-creative-studio-design.md  2026-01-17-creative-studio-implementation.md
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  MessageStream.tsx  SpecialistAvatar.tsx  index.ts
frontend/src/components/generation/: GenerationPreview.tsx  ProgressBar.tsx  index.ts
frontend/src/components/settings/: ModelSelector.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql
